[package]
name = "wt_native"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
common = { path = "../common" }

bytes.workspace = true
fastrand.workspace = true

hex = "0.4"
wtransport = { version = "0.1", features = [ "dangerous-configuration" ] }
tokio = { version = "1", features = ["full"] }
